--- a/css/singleCalculator.css
+++ b/css/singleCalculator.css
@@ -1,9 +1,20 @@
+html {
+  height: 100vh;
+  overflow: hidden;
+  font-size: 10px;
+}
+
 a {
   text-decoration: none;
 }
 
 hr {
   border: 1px solid yellow;
+  width: 100%;
+}
+
+.hrVisible {
+  display: none;
 }
 
 img {
@@ -11,16 +22,11 @@ img {
   text-align: center;
 }
 
-html {
-  height: 100vh;
-  overflow: hidden;
-}
-
 #sectionSplashScreen {
   position: fixed;
   right: 0;
   bottom: 0;
-  top: 100px;
+  top: 10rem;
   z-index: -1;
   width: 100%;
   height: auto;
@@ -36,7 +42,7 @@ html {
 }
 
 .body1 header {
-  border-bottom: 3px solid white;
+  border-bottom: 0.3rem solid white;
 }
 
 .body1 #clearBTN {
@@ -46,8 +52,8 @@ html {
 .body1 .singleCalcDescripton {
   display: block;
   font-family: "Courier New", Courier, monospace;
-  font-size: 35px;
-  margin: 20px 0;
+  font-size: 3.5rem;
+  margin: 2rem 0;
 }
 
 .body2 .singleCalcDescripton,
@@ -56,8 +62,9 @@ html {
 }
 
 .body2 {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
   background-size: 300% 300%;
   background-image: linear-gradient(
     -45deg,
@@ -71,20 +78,21 @@ html {
 }
 
 main {
-  padding: 25px 40px;
+  padding: 2.5rem 4rem;
 }
 
 header {
   color: aliceblue;
   background-color: black;
-  padding: 20px;
+  padding: 0 2rem;
   display: flex;
   justify-content: space-between;
   width: 100vw;
+  height: 10rem;
 }
 
 header span {
-  font-size: 32px;
+  font-size: 3.2rem;
   display: flex;
   justify-self: center;
   align-self: center;
@@ -100,15 +108,15 @@ header span {
 .headerBTN {
   color: black;
   background-color: aliceblue;
-  border: 2px solid whitesmoke;
-  border-radius: 15px;
-  height: 50px;
-  width: 200px;
-  padding: 10px 20px;
-  margin: 5px;
+  border: 0.2rem solid whitesmoke;
+  border-radius: 1.5rem;
+  height: 5rem;
+  width: 20rem;
+  padding: 1rem 2rem;
+  margin: 5rem;
   font-family: "Courier New", Courier, monospace;
   font-weight: 700;
-  font-size: 15px;
+  font-size: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -126,91 +134,93 @@ header span {
   background-color: yellow;
   border-radius: 15px;
   border: 1px dashed grey;
-  width: 250px;
-  height: 50px;
-  font-size: 20px;
-  padding: 8px 12px;
+  width: 25rem;
+  height: 5rem;
+  font-size: 2rem;
+  padding: 0.8rem 1.2rem;
   cursor: pointer;
 }
 
 .result {
-  border: 5px solid black;
-  font-size: 24px;
-  margin-top: 24px;
+  border: 0.5rem solid black;
+  font-size: 2.4rem;
+  margin-top: 2.4rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   width: 90vw;
-  height: 700px;
+  height: 70rem;
 }
 
 .info {
-  margin: 10px;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .headNumber {
   font-weight: bolder;
-  font-size: 36px;
+  font-size: 3.6rem;
   text-align: center;
 }
 
 .resultImage {
   display: grid;
-  grid-template-columns: repeat(5, 150px);
+  grid-template-columns: repeat(5, 15rem);
   scale: 0.8;
-  top: -60px;
+  top: -6rem;
   position: relative;
 }
 
 .matcher1 {
-  border: 5px solid black;
-  height: 1px;
-  width: 150px;
+  border: 0.5rem solid black;
+  height: 0.1rem;
+  width: 15rem;
 }
 
 .wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 150px;
+  height: 15rem;
 }
 
 .matcher2 {
-  border: 5px solid black;
-  width: 1px;
-  height: 150px;
+  border: 0.5rem solid black;
+  width: 0.1rem;
+  height: 15rem;
 }
 
 .matcher3_right_top {
-  border: 5px solid black;
-  width: 1px;
-  height: 150px;
+  border: 0.5rem solid black;
+  width: 0.1rem;
+  height: 15rem;
   transform: rotate(-135deg);
 }
 
 .matcher3_right_bottom {
-  border: 5px solid black;
-  width: 1px;
-  height: 150px;
+  border: 0.5rem solid black;
+  width: 0.1rem;
+  height: 15rem;
   transform: rotate(-45deg);
 }
 
 .matcher3_left_top {
-  border: 5px solid black;
-  width: 1px;
-  height: 150px;
+  border: 0.5rem solid black;
+  width: 0.1rem;
+  height: 15rem;
   transform: rotate(-45deg);
 }
 
 .matcher3_left_bottom {
-  border: 5px solid black;
-  width: 1px;
-  height: 150px;
+  border: 0.5rem solid black;
+  width: 0.1rem;
+  height: 15rem;
   transform: rotate(45deg);
 }
 
 .special {
-  border: 5px solid yellow;
+  border: 0.5rem solid yellow;
 }
 
 /* Animations */
@@ -227,22 +237,60 @@ header span {
 }
 
 /* Media */
-@media (max-width: 1054px) {
-  .resultImage {
-    scale: 0.7;
-    grid-template-columns: repeat(5, 50px);
-    grid-template-rows: repeat(5, 50px);
-  }
-
+@media (max-width: 1060px) {
   html {
-    max-height: 100vh;
+    font-size: 9px;
   }
+}
 
-  .resultImage {
-    scale: 0.4;
+@media (max-width: 960px) {
+  html {
+    font-size: 8px;
+  }
+}
+
+@media (max-width: 860px) {
+  html {
+    font-size: 7px;
+  }
+}
+
+@media (max-width: 760px) {
+  .result {
+    justify-content: center;
+    height: auto;
+    width: auto;
+    font-size: 2.7rem;
   }
 
   .info {
-    margin-right: 200px;
+    flex-direction: row;
+  }
+
+  hr {
+    width: auto;
+    margin: 0 1rem;
+  }
+
+  .hrVisible {
+    display: block;
+  }
+}
+
+@media (max-width: 660px) {
+  html {
+    font-size: 6px;
+  }
+}
+
+@media (max-width: 560px) {
+  html {
+    font-size: 5px;
+  }
+}
+
+@media (max-width: 470px) {
+  html {
+    font-size: 4px;
   }
 }
